--- a/src/app/views/index.phtml
+++ b/src/app/views/index.phtml
@@ -3,13 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Store</title>
+    <title>Mongo -CRUD</title>
     <link rel="stylesheet" href="/assets/node_modules/bootstrap/dist/css/bootstrap.min.css">
     </style>
 </head>
 
 <body>
+    <div class="text-center border-bottom mt-3 pb-4">
+        <a href="/" class="btn btn-primary">Insert</a>
+        <a href="/index/read" class="btn btn-success">All Users</a>
+    </div>
     <div class="container-fluid">
+
         <?php echo $this->getContent(); ?>
     </div>
     <script src="/assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
